src/test/ui/type-alias-impl-trait/generic_duplicate_lifetime_param.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/generic_duplicate_lifetime_param.rs:5:10
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |          ^^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'b` never used
  --> $DIR/generic_duplicate_lifetime_param.rs:5:14
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |              ^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:7:1
   |
LL | / fn one<'a>(t: &'a ()) -> Two<'a, 'a> {
LL | |     t
LL | | }
   | |_^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_lifetime_param.rs:5:10
   |
LL | type Two<'a, 'b> = impl std::fmt::Debug;
   |          ^^  ^^

error: aborting due to previous error

